# GStreamerAppTest

./: .gitignore  CMakeLists.txt
src/AppSink/: main.cpp
